<resources>
    <string name="app_name">UI1Project</string>
    <string name="personal_info_title">个人信息</string>
    <string name="head_portrait">头像</string>
    <string name="user_nick_name">YI家</string>
    <string name="nick_name">昵称</string>
    <string name="sexual">性别</string>
    <string name="sex">女</string>
    <string name="personalized_signature">个性签名</string>
    <string name="personalized_edit_signature">爱家庭，爱生活</string>
    <string name="camera_head">拍照</string>
    <string name="from_photo_album">从手机相册中选择</string>
    <string name="head_cancel">取消</string>

    <string-array name="myListText">
        <item>我的订单</item>
        <item>我的粮票</item>
        <item>我的收藏</item>
        <item>我的话题</item>
        <item>地址管理</item>
        <item>联系客服</item>
    </string-array>


    <string name="personal_setting">个人设置</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string-array name="personal_list_view">
        <item>图片质量</item>
        <item>清楚缓存</item>
        <item>意见反馈</item>
        <item>关于我们</item>
        <item>支持我们</item>
        <item>退出账号</item>
    </string-array>

    <string name="tijiao">提交</string>
    <string name="person_name">YI家</string>
    <string name="person_signature">爱家，爱生活</string>
    <string name="followers_phone">联系人电话</string>
    <string name="folloewers">联系人</string>
    <string name="cellphone">手机</string>
    <string name="save">保存</string>
    <string name="invite_friend">邀请好友加入</string>
    <string name="promotion_code">优惠码</string>
    <string name="promotion_number">FAILD17</string>
    <string name="copy_to_friend">长按复制分享给好友</string>
    <string name="share_to_friend">分享优惠码给好友</string>

    <string name="weixin_friend">微信好友</string>
    <string name="friend_quan">朋友圈</string>
    <string name="weibo">微博</string>
    <string name="your_advice">写下您的宝贵建议和意见</string>
    <string name="contact_way">联系方式(邮箱/手机号)</string>

    <string name="healthy_menu">健康菜谱</string>
    <string name="menu">菜谱</string>
    <string name="check_the_details">查看详情</string>
    <string name="recipe">RECIPE</string>
    <string name="menu_one">板栗炖排骨</string>
    <string name="menu_two">黄金虾仁蛋炒饭</string>
    <string name="menu_three">群英荟萃炒饭</string>
    <string name="price_one">食材费用：¥25.00</string>
    <string name="price_two">食材费用：¥20.00</string>
    <string name="price_three">食材费用：¥8.00</string>
    <string name="material">准备食材：板栗50g 排骨500g</string>
    <string name="material2">准备食材：虾仁 鸡蛋 西兰花 圣女果</string>
    <string name="material3">准备食材：白菜 红枣 黄椒 火腿片</string>


    <!--商店分类-->
    <string name="all_sort">全部分类</string>
    <string name="organic_vegetable">有机蔬菜</string>
    <string name="current_organic_vegetable">有机时蔬</string>
    <string name="farm_native">农家土特产</string>

    <!--购物车-->
    <string name="gewuce">购物车</string>
    <string name="bji">编辑</string>
    <string name="yojiwdo">阿青家有机豌豆</string>
    <string name="yojictr">有机纯天然，不添加任何化学试剂</string>
    <string name="yojihuac">阿青家有机花菜</string>

    <!--主页、商铺、我-->
    <string name="home">首页</string>
    <string name="shop">铺子</string>
    <string name="me">我</string>
    <string name="lojiatec">农家特产</string>
    <string name="yojishuo">有机生活</string>
    <string name="jiaksqu">健康菜谱</string>

    <!--收货人信息-->
    <string name="sohuorexxi">收货人信息</string>
    <string name="bacue">保存</string>
    <string name="sohuorexim">收货人姓名</string>
    <string name="sojihma">手机号码</string>
    <string name="yozbma">邮政编码</string>
    <string name="sesqu">省、市、区</string>
    <string name="xxidiz">详细地址</string>

    <!--阿青家客服-->
    <string name="aiqjiakehu">阿青家客服</string>
    <string name="yowti">有问题，找阿青</string>
    <string name="faso">发送</string>

    <!--zxy-->
    <string-array name="menu_parepre_one">
        <item>板栗</item>
        <item>猪大排</item>
    </string-array>
    <string-array name="menu_parepre_two">
        <item>姜</item>
        <item>食盐</item>
    </string-array>
    <string-array name="menu_parepre_three">
        <item>生抽</item>
        <item>料酒</item>
    </string-array>
    <string-array name="menu_parepre_four">
        <item>白糖</item>
        <item>淀粉</item>
    </string-array>
    <string-array name="menu_parepre_five">
        <item>水</item>
        <item>植物油</item>
    </string-array>
    <string-array name="menu_parepre_weight_one">
        <item>350g</item>
        <item>400g</item>
    </string-array>
    <string-array name="menu_parepre_weight_two">
        <item>5g</item>
        <item>5g</item>
    </string-array>
    <string-array name="menu_parepre_weight_three">
        <item>5g</item>
        <item>5g</item>
    </string-array>
    <string-array name="menu_parepre_weight_four">
        <item>5g</item>
        <item>5g</item>
    </string-array>
    <string-array name="menu_parepre_weight_five">
        <item>适量</item>
        <item>1茶匙</item>
    </string-array>

    <string-array name="menu_process_number">
        <item>1.</item>
        <item>2.</item>
        <item>3.</item>
        <item>4.</item>
        <item>5.</item>
        <item>6.</item>
        <item>7.</item>
        <item>8.</item>
    </string-array>
    <string-array name="menu_process">
        <item>将排骨冷水下锅氽烫，水开后将排骨氽汤至去除杂质和血水</item>
        <item>生板栗去皮去核备用</item>
        <item>锅内放油烧热，放入排骨，炒至排骨表面金黄微焦，然后放入香料煸炒至能闻到香料的香味</item>
        <item>把炒香的香料和排骨捞起，热油继续留在锅内，在热油里放几块冰糖，小火炒至冰糖溶化成焦糖色</item>
        <item>迅速倒入排骨和香料翻炒，均匀的裹上糖色，加入料酒、生抽、老抽翻炒均匀</item>
        <item>加入没过排骨的开水，盖上盖子小火煮20分钟左右，20分钟后加入板栗，小火再焖制</item>
        <item>最后还剩点汁的时候可以试下咸味，不够可再加酱油，这一步汁别收太干，不然板栗吃起来口感会有点干，而且汤汁留着用来拌米饭也是很香的</item>
        <item>装盘，香甜的板栗烧排骨可以上桌了</item>
    </string-array>
    <!--zxy-->

    <!--下拉刷新控件的字符串-->
    <string name="pull_to_refresh">下拉刷新</string>
    <!-- 结算页面字符串-->
    <string-array name="product_name">
        <item>阿青家有机豌豆</item>
        <item>阿青家有机花菜</item>
        <item>阿青家有机萝卜</item>
        <item>阿青家有机萝卜</item>
        <item>阿青家有机萝卜</item>
        <item>阿青家有机萝卜</item>
    </string-array>
    <string-array name="product_introduce">
        <item>有机纯天然,不添加任何化学试剂</item>
        <item>有机纯天然,不添加任何化学试剂</item>
        <item>有机纯天然,不添加任何化学试剂</item>
        <item>有机纯天然,不添加任何化学试剂</item>
        <item>有机纯天然,不添加任何化学试剂</item>
        <item>有机纯天然,不添加任何化学试剂</item>
    </string-array>
    <string-array name="product_price">
        <item>28.8/斤</item>
        <item>9.8/斤</item>
        <item>10.8/斤</item>
        <item>10.8/斤</item>
        <item>10.8/斤</item>
        <item>10.8/斤</item>
    </string-array>
</resources>
