<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/imagebutton"
            android:background="@null"
            android:src="@mipmap/arow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sohuorexxi"
            android:layout_marginTop="@dimen/textviewtop"
            android:layout_marginBottom="@dimen/textviewbottom"
            android:textSize="@dimen/shuorzti"
            android:textColor="#323232"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/textviewright"
            android:layout_alignParentRight="true"
            android:text="@string/bacue"
            android:textSize="@dimen/textviewtextsize"
            android:textColor="#698D45"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view"
        android:background="#cdcdcd"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittextheight"
        android:hint="@string/sohuorexim"
        android:background="#f2f2f2"
        android:textColorHint="#cdcdcd"
        android:textSize="@dimen/edittexttextsize"
        android:layout_marginLeft="@dimen/edittextleft"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view"
        android:background="#cdcdcd"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittextheight"
        android:hint="@string/sojihma"
        android:textColorHint="#cdcdcd"
        android:background="#f2f2f2"
        android:textSize="@dimen/edittexttextsize"
        android:layout_marginLeft="@dimen/edittextleft"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view"
        android:background="#cdcdcd"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittextheight"
        android:hint="@string/yozbma"
        android:textColorHint="#cdcdcd"
        android:background="#f2f2f2"
        android:textSize="@dimen/edittexttextsize"
        android:layout_marginLeft="@dimen/edittextleft"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view"
        android:background="#cdcdcd"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittextheight"
        android:hint="@string/sesqu"
        android:background="#f2f2f2"
        android:textSize="@dimen/edittexttextsize"
        android:layout_marginLeft="@dimen/edittextleft"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view"
        android:background="#cdcdcd"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittextheight"
        android:hint="@string/xxidiz"
        android:textColorHint="#cdcdcd"
        android:background="#f2f2f2"
        android:textSize="@dimen/edittexttextsize"
        android:layout_marginLeft="@dimen/edittextleft"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view"
        android:background="#cdcdcd"/>
</LinearLayout>

