<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/view_margin_line">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/info_margin"
            android:text="@string/cancel"
            android:textSize="@dimen/info_title_text18sp" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="@dimen/info_margin"
            android:text="@string/confirm"
            android:textSize="@dimen/info_title_text18sp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/sexual_male"
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/sexual_select_bg"
            android:padding="@dimen/info_margin"
            android:text="@string/male"
            android:textColor="@color/view_margin_line"
            android:textSize="@dimen/info_title_text18sp" />

        <RadioButton
            android:button="@null"
            android:background="@drawable/sexual_select_bg"
            android:id="@+id/sexual_female"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/info_margin"
            android:text="@string/female"
            android:textColor="@color/title_font_color"
            android:textSize="@dimen/info_title_text18sp" />
    </RadioGroup>
</LinearLayout>