<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:id="@+id/followers_setting_arow"
            android:layout_width="13dp"
            android:layout_height="21dp"
            android:background="@mipmap/arow"
            android:layout_marginLeft="12dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="新增联系人"
            android:textSize="18sp"
            android:textColor="@color/fontblack"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/followers_setting_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/fontgreen"
            android:textSize="15sp"
            android:paddingRight="12dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linecolor"/>
    <EditText
        android:background="@color/white"
        android:id="@+id/followers_phone_textview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/followers_phone"
        android:textSize="15sp"
        android:textColor="@color/fontblack2"
        android:paddingLeft="12dp"
        android:paddingTop="8dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linecolor"/>
    <EditText
        android:background="@color/white"
        android:id="@+id/followers_textview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/folloewers"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="@color/fontblack2"
        android:paddingLeft="12dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:background="@color/linecolor"/>
    <EditText
        android:background="@color/white"
        android:id="@+id/cellphone_textview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/cellphone"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="@color/fontblack2"
        android:paddingLeft="12dp"
        android:paddingTop="8dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linecolor"/>
</LinearLayout>
