<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/kehubottom"
            android:layout_marginLeft="@dimen/kehuleft"
            android:layout_marginTop="@dimen/kehutop"
            android:background="@null"
            android:src="@mipmap/arow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/kehutextviewbottom"
            android:layout_marginTop="@dimen/kehutextviewtop"
            android:text="@string/aiqjiakehu"
            android:textColor="#323232"
            android:textSize="@dimen/kehutextviewsize" />
    </RelativeLayout>
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding">
        <EditText
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/yowti"
            android:textSize="@dimen/edittextsize"
            android:paddingLeft="@dimen/padding"
            android:textColor="#787878"
            android:background="@null"/>
        <TextView
            android:id="@+id/add_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faso"
            android:textSize="@dimen/edittextsize"
            android:layout_marginLeft="@dimen/padding"/>
    </LinearLayout>

</LinearLayout>
