<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </ScrollView>

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:button="@null"
            android:drawableTop="@mipmap/home_page"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/shop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:button="@null"
            android:drawableTop="@mipmap/shop"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/shop" />

        <RadioButton
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:button="@null"
            android:drawableTop="@mipmap/me"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/me" />
    </RadioGroup>

</RelativeLayout>