<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="32dp">
                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="21dp"
                    android:src="@mipmap/arow"
                    android:layout_marginLeft="13dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_friend"
                    android:textSize="19sp"
                    android:gravity="center"
                    android:textColor="@color/fontblack1"/>
            </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="411dp"
            android:layout_marginTop="12dp"
            android:background="@mipmap/background1">
            <LinearLayout
                android:id="@+id/content"
                android:layout_width="182dp"
                android:layout_height="100dp"
                android:layout_marginTop="76dp"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"
                   android:textColor="@color/fontblack1"
                   android:text="分享您的优惠码给好友,好友即可"
                   android:textSize="12sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/fontblack1"
                    android:text="使用优惠码兑换30元粮票,好友兑"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/fontblack1"
                    android:text="换成功并使用代金券首次下单后,"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/fontblack1"
                    android:text="阿青家也发给您一张30元粮票哦~"
                    android:textSize="12sp"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/point"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/content"
                android:layout_alignLeft="@id/content"
                android:background="@mipmap/point"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/promotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promotion_code"
                android:textSize="15sp"
                android:textColor="@color/fontblack2"
                android:layout_below="@id/point"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"/>
            <TextView
                android:id="@+id/promotion_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promotion_number"
                android:textSize="18sp"
                android:textColor="@color/fontblack1"
                android:layout_below="@id/promotion"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"/>
            <TextView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:background="@mipmap/star"
                android:layout_toLeftOf="@id/promotion_number"
                android:layout_marginTop="260dp"
                android:layout_marginRight="15dp"/>
            <TextView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:background="@mipmap/star"
                android:layout_toRightOf="@id/promotion_number"
                android:layout_marginTop="260dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:id="@+id/copy_to_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_to_friend"
                android:layout_below="@id/promotion_number"
                android:layout_centerHorizontal="true"
                android:textSize="12dp"
                android:textColor="@color/fontblack2"
                android:layout_marginTop="18dp"/>
            <ImageView
                android:id="@+id/point1"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/copy_to_friend"
                android:layout_alignLeft="@id/content"
                android:background="@mipmap/point"
                android:layout_marginTop="28dp"/>
        </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_to_friend"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="59dp">
                <ImageView
                    android:id="@+id/weixin_image"
                    android:layout_width="46dp"
                    android:layout_height="45dp"
                    android:background="@mipmap/weixin"
                    android:layout_marginLeft="57dp"/>
                <ImageView
                    android:id="@+id/friend_quan_image"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/friend_quan"
                    android:layout_centerHorizontal="true"
                    />
                <ImageView
                    android:id="@+id/weibo_image"
                    android:layout_width="46dp"
                    android:layout_height="45dp"
                    android:background="@mipmap/weibo"
                    android:layout_marginLeft="57dp"
                    android:layout_toRightOf="@id/friend_quan_image"/>
                <TextView
                    android:id="@+id/weixin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weixin_friend"
                    android:layout_below="@id/weibo_image"
                    android:textColor="@color/fontblack1"
                    android:textSize="12dp"
                    android:layout_alignLeft="@id/weixin_image"
                    android:layout_marginTop="18dp"/>
                <TextView
                    android:id="@+id/friend_quan_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend_quan"
                    android:layout_below="@id/weibo_image"
                    android:textColor="@color/fontblack1"
                    android:textSize="12dp"
                    android:layout_alignRight="@id/friend_quan_image"
                    android:layout_marginTop="18dp"/>
                <TextView
                    android:id="@+id/weibo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weibo"
                    android:layout_below="@id/weibo_image"
                    android:textColor="@color/fontblack1"
                    android:textSize="12dp"
                    android:layout_toRightOf="@id/friend_quan_text"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="69dp"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
